<resources>
    <string name="app_name">My Application996</string>
    <string name="The_skeleton">The skeleton</string>
    <string name="Digestive">Digestive</string>
    <string name="The_circulatory_system">The circulatory system</string>
    <string name="Respiratory_system">Respiratory system</string>
    <string name="Musculature">Musculature</string>
    <string name="Glands_and_immunomodulators">Glands and immunomodulators</string>
    <string name="The_pectoralis_major_muscle"> The pectoralis major muscle </string>
    <string name="The_pectoralis_major_muscle1">It is a large skeletal muscle that appears clearly under the skin in males, and is covered by the breasts in females. This muscle pulls the arm towards the body and rotates the arm in the medial and pulls it forward. It is also considered one of the muscles that help the breathing process.  </string>
    <string name="The_radius_muscle">The radius muscle</string>
    <string name="The_radius_muscle1">It is the arm muscle that works to flex the arm and the elbow joint
This muscle is also able to accomplish both movements of the hand, i.e. directing the palm of the hand to the ground and the movement of the extension of the hand, and this depends on the position of the arm
This muscle is connected to the distal acylar protuberance of the radius bone (the styloid appendix of the radius) via the humeral-radial ligament, as well as to the lateral letter above the humeral condyle of the humerus. The humeral-pronator muscle bends the arm at the elbow joint. When the arm is in the prone position - that is, facing the ground - the muscle tends to make the countermove, which is the arm extension movement wherever it is bent. In the extension of the arm, the muscle tends to perform the reverse movement, which is the pronation of the arm when it is also bent.</string>
    <string name="Quadriceps_muscle">Quadriceps_muscle</string>
    <string name="Quadriceps_muscle1">It is a group of large muscles that are found on the front of the thigh and it includes the four dominant muscles in that area. It is the large extensor muscle of the knee and forms a large lumpy mass to protect the front part of the thigh bone. The quadriceps muscle is divided into four main parts, or "heads", each of which has a distinct name:

    The rectus femoris muscle occupies the middle of the thigh and covers most of the other three muscles of the thigh. This muscle originates from the ilium (hip) and gets its name from its straight line.

 * The other three muscles are located under the rectus thigh muscle and arise from the body of the thigh bone and cover it from the large and small trochanter to the medial and lateral femoral condyles.
    The vastus lateralis muscle is located on the lateral (outer) side of the thigh bone The medial widened muscle is located on the medial (inner) side of the thigh bone.
    The medial vastus muscle is located between the medial dilator muscle and the medial widened muscle on the front of the thigh bone (that is, on the upper or anterior part of the thigh), but deeper than the rectus femur. It usually cannot be seen without incision (cutting) the rectus femoral muscle

</string>
    <string name="The_iliac_muscle">The iliac muscle</string>
    <string name="The_iliac_muscle1">It is a flat muscle that fills the iliac fossa.

    Origin: from the iliac fossa, its upper section.
    Anchor: Its fibers run toward the luteum behind the inguinal ligament and are brutal to the psoas and anchored to the trochanter.
    Innervation: the femoral nerve, branch of the lumbar plexus.
    the work:

    Flexion of the hip over the pelvis at the level of the hip joint.
    Turn it medially and when the thigh is still, it turns the trunk over the thigh </string>
    <string name="deltoid"> deltoid</string>
    <string name="deltoid1">In human anatomy, it is the muscle that makes up the shoulder contour rotation. In the past, this muscle was called Daltoids, and some anatomists still use this name. The deltoid muscle is named after the triangle-shaped letter of the deltoid in the ancient Greek alphabet. The deltoid muscle forms the connection site between the muscles of the anterior fibers: the anterior fibers of the deltoid muscle separate the shoulder if it is in a rotating position. The anterior fibers of the deltoid muscle are weak during transverse contractility, but the pectoralis major muscle and shoulder assist in transverse contraction Extrinsic fibers: The external fibers of the deltoid muscle provide transverse relaxation. In particular, the deltoid transverse muscle is weak in the transverse relaxation process.

Lateral fibers: the lateral fibers of the deltoid muscle separate the shoulder and contract it in the position of internal rotation and also perform a transverse shoulder distraction movement

  </string>
    <string name="The_calcaneus_muscle">The calcaneus muscle</string>
    <string name="The_calcaneus_muscle1">It is a group of three pairs of muscles located on the lateral side of the neck: the anterior, intermediate and posterior malleolus. Nerves these muscles: the fourth, fifth, and sixth spinal nerves (C4-C6)

The anterior malleolus and the middle molar raise the first rib and the neck flexes towards their side; The posterior plantar raises the second rib and turns the head towards its side.

The posterior plantar muscle raises the second rib and turns the head towards it.

The plantar muscles play an auxiliary role in breathing, because they raise the first and second ribs, as well as the epithelial muscles.</string>
    <string name="The_twitch_muscle">The twitch muscle</string>
    <string name="The_twitch_muscle1"> It is a muscle of the lower extremity of the human body. This muscle is implanted in the tendon of the obturator muscle, with which the nerve connecting to the quadriceps muscle is connected mainly to the rotation of the thigh bone (the hip joint)</string>
    <string name="the_tongue">the tongue</string>
    <string name="the_tongue1">The tongue is divided into four areas for taste: 1- The area of ​​taste and sense of sweet foods such as sugars and some types of amino acids, and this area is found at the front end and the first third of the tongue

2- The acid-tasting area, which is found on the left and right sides of the tongue.

3- Citrus tasting zone, located at the front end of the tongue.

4- As for the fourth zone, which is responsible for tasting bitter foods, there is at the back the last third of the tongue.

</string>
    <string name="throat"> throat</string>
    <string name="throat1">The sound originates in the larynx, and also in it the volume and intensity of the voice is controlled, and this matter contributes to the force of exhalation from the lungs (loudness).

Laryngeal tuning of sound is used to generate sound of a specific fundamental frequency or pitch. This sound undergoes changes as it passes through the vocal tract, depending on the position of the tongue, lips, mouth and throat. The changes to which the voice exiting the larynx undergoes as it passes through the vocal tract filter, these changes create the different linguistic sounds (consonants and vowels) found in different world languages ​​as well as tone through conscious processes of stress and linguistic melody. In addition, the larynx has a similar function to the lungs in creating the pressure differences required to produce sound, as the constricted larynx may rise or They are reduced, affecting the size of the oral cavity and are necessary for static sounds originating in the glottis. The two vocal folds can converge (by approximating the two premolar cartilages), allowing them to vibrate.
 The muscles associated with the arytenoid adenoids control this process by controlling the degree of openness. The length and tension of the vocal fold can also be controlled by shaking the thyroid cartilage back and forth on the cricoid cartilage (either directly through contraction of the cricothyroid muscle or

   Indirectly, by changing the position of the larynx vertically) by adjusting the tension of the muscles located within the vocal folds and by moving the arytenoid cartilages
Forwards and backwards, this causes the voice to rise or fall during the voting process. In most males, the vocal folds are longer and more massive than in most females, and this results in a lower pitch in males. The vocal system consists of two pairs of mucosal folds, these are a pair of false vocal folds (vestibular folds) and a pair of true vocal folds The two false vocal folds (vestibular) are covered by a respiratory epithelium while the true vocal folds (vocal folds) are
Covered by flat stratum epithelium. It should be understood that the false (vestibular) fold is not responsible for sound production but is responsible for resonance. There is an exception to the above that occurs in the Tibetan hymn and the kargira, which is a form of tovy singing emanating from the throat. Both of the previous styles use false vocal folds to create a faint voice. It is worth noting that the false vocal folds do not contain muscles, while the true vocal folds do contain skeletal muscles.

</string>
    <string name="Liver">Liver</string>
    <string name="Liver1">An organ found only in vertebrates that detoxifies various metabolites, synthesizes proteins, and produces biochemicals needed for digestion. In humans, the liver is located in the right upper quadrant of the abdomen, below the diaphragm. Its other roles in metabolism include: regulating glycogen storage, the breakdown of red blood cells, and the production of hormones. The liver is an attached digestive gland that produces bile (an alkaloid compound that helps break down fats). Bile aids digestion by emulsifying fats. The bile produced by the liver is stored in the gallbladder - a small sac located under the liver - then it travels to the small intestine to complete the digestive process. The highly specialized liver tissue consists of hepatocytes, which regulate a wide range of

   Large-scale biochemical reactions, including the synthesis and breakdown of small and complex molecules, many of which are necessary for normal biological functions. Estimates of the total number of liver functions vary.
 But textbooks generally state that it is about 500 jobs. Often there is no known way yet to compensate for the absence of liver function in the long term, although hepatic dialysis techniques can be used in the short term. No artificial livers have been developed to promote long-term replacement in the absence of a liver. As of 2018, liver transplantation is the only option for complete liver failure.

</string>
    <string name="esophagus">esophagus </string>
    <string name="esophagus1">A vertebrate organ through which food from the pharynx passes into the stomach, with the help of peristaltic contractions. The esophagus is a muscular, fibrous tube, about 25 cm long in adult humans. The esophagus passes behind the trachea, heart, and through the diaphragm until it opens to the upper part of the stomach. During swallowing, the epiglottis retracts back and blocks the entrance to the larynx, preventing food from entering the airway.

</string>
    <string name="Stomach">Stomach</string>
</resources>